--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-lazyload": "^2.5.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
   },
